--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,17 @@ ghost.jwt.refresh-token-validity-in-seconds=8640000
 #
 ###
 
+
+###
+#send email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lovegau2892003@gmail.com
+spring.mail.password=epgszbjiklhjzuxq
+spring.mail.properties.mail.smtp.auth=true  
+# spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+#
+###
+
+
