--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,8 @@ ghost.jwt.refresh-token-validity-in-seconds=8640000
 #
 ###
 
-
 ###
-#send email
+#config send email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=lovegau2892003@gmail.com
@@ -34,4 +33,13 @@ spring.mail.properties.mail.smtp.starttls.required=true
 #
 ###
 
-
+###
+#config upload file
+# #default = 1MB
+spring.servlet.multipart.max-file-size=50MB
+# #default = 10 MB (form data)
+spring.servlet.multipart.max-request-size=50MB
+#base path
+ghost.upload-file.base-uri=file:///E:/Graduation_Project/upload/
+#
+###
