update avatar user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,4 @@ spring.servlet.multipart.max-request-size=50MB
 ghost.upload-file.base-uri=file:///E:/Graduation_Project/upload/
 #
 ###
+upload.avatar-dir=E:/Graduation_Project/upload/avatars
