--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,12 @@ spring.mail.properties.mail.smtp.starttls.required=true
 ###
 
 ###
+#config pagination
+#start page = 1
+spring.data.web.pageable.one-indexed-parameters=true
+###
+
+###
 #config upload file
 # #default = 1MB
 spring.servlet.multipart.max-file-size=50MB
