--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,6 @@ ghost.upload-file.base-uri=file:///E:/Graduation_Project/upload/
 #
 ###
 upload.avatar-dir=E:/Graduation_Project/upload/avatars
+
+###
+upload.product-dir=E:/Graduation_Project/upload/products
