update order his

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=capstone
-
-###
+# graduation_project
+###capstone
 #config connect mysql
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/graduation_project
 spring.datasource.username=root
 spring.datasource.password=
@@ -53,3 +54,5 @@ upload.avatar-dir=E:/Graduation_Project/upload/avatars
 
 ###
 upload.product-dir=E:/Graduation_Project/upload/products
+
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
