update login with github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,4 +55,8 @@ upload.avatar-dir=E:/Graduation_Project/upload/avatars
 ###
 upload.product-dir=E:/Graduation_Project/upload/products
 
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# Cấu hình cho GitHub
+spring.security.oauth2.client.registration.github.client-id=Ov23liUOOFNHwmSMZFvm
+spring.security.oauth2.client.registration.github.client-secret=08974958ee3458bf98c283185ed65a29a73be2e2
+
+spring.security.oauth2.client.registration.github.scope=user:email
