--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,8 @@ spring.security.oauth2.client.registration.github.client-id=Ov23liUOOFNHwmSMZFvm
 spring.security.oauth2.client.registration.github.client-secret=08974958ee3458bf98c283185ed65a29a73be2e2
 
 spring.security.oauth2.client.registration.github.scope=user:email
+
+# Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=40247950524-osugbpfuarceg0g8rh232l8vktq18mvf.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid, profile, email
