update order with vnpay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,10 @@ spring.security.oauth2.client.registration.github.scope=user:email
 spring.security.oauth2.client.registration.google.client-id=40247950524-osugbpfuarceg0g8rh232l8vktq18mvf.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid, profile, email
+
+
+#config vnpay
+ghost.vnpay.tmn-code= ICC7VOVO
+ghost.vnpay.hash-secret=B2471EFVJZIE7CDLGA6UBUOLTPP4X3FK
+ghost.vnpay.vnp-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+ghost.vnpay.vnp-return-url=http://localhost:8080/thanks
