--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,4 +71,4 @@ spring.security.oauth2.client.registration.google.scope=openid, profile, email
 ghost.vnpay.tmn-code= ICC7VOVO
 ghost.vnpay.hash-secret=B2471EFVJZIE7CDLGA6UBUOLTPP4X3FK
 ghost.vnpay.vnp-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-ghost.vnpay.vnp-return-url=http://localhost:8080/thanks
+ghost.vnpay.vnp-return-url=http://localhost:3000/payment-return
