--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.jpa.show-sql: true
 ###
 
 server.address=0.0.0.0
+openapi.api.key=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
+openapi.api.model=gpt-4o-mini
+openapi.api.url=https://api.openai.com/v1/chat/completions
 
 ###
 #config jwt
