update chat bot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql: true
 ###
 
 server.address=0.0.0.0
+openapi.api.key=
 openapi.api.model=gpt-4o-mini
 openapi.api.url=https://api.openai.com/v1/chat/completions
 
