--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,6 @@ ghost.vnpay.tmn-code= ICC7VOVO
 ghost.vnpay.hash-secret=B2471EFVJZIE7CDLGA6UBUOLTPP4X3FK
 ghost.vnpay.vnp-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 ghost.vnpay.vnp-return-url=http://localhost:3000/payment-return
+
+# Giúp Jackson xử lý LocalDateTime
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
