--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,13 +51,13 @@ spring.servlet.multipart.max-file-size=50MB
 # #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
 #base path
-ghost.upload-file.base-uri=file:///E:/Graduation_Project/upload/
+ghost.upload-file.base-uri=file:///D:/Graduation_Project/upload/
 #
 ###
-upload.avatar-dir=E:/Graduation_Project/upload/avatars
+upload.avatar-dir=D:/Graduation_Project/upload/avatars
 
 ###
-upload.product-dir=E:/Graduation_Project/upload/products
+upload.product-dir=D:/Graduation_Project/upload/products
 
 # Cấu hình cho GitHub
 spring.security.oauth2.client.registration.github.client-id=Ov23liUOOFNHwmSMZFvm
