--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,6 +59,8 @@ upload.avatar-dir=D:/Graduation_Project/upload/avatars
 ###
 upload.product-dir=D:/Graduation_Project/upload/products
 
+upload.slide-dir=D:/Graduation_Project/upload/slides
+
 # Cấu hình cho GitHub
 spring.security.oauth2.client.registration.github.client-id=Ov23liUOOFNHwmSMZFvm
 spring.security.oauth2.client.registration.github.client-secret=08974958ee3458bf98c283185ed65a29a73be2e2
